objects/BlueBerrySession__c.object
<CustomObject>
    <fields>
        <fullName>BlueBerryEvent__c</fullName>
        <label>Event Name</label>
        <referenceTo>BlueBerryEvent__c</referenceTo>
        <relationshipLabel>BlueBerrySessions</relationshipLabel>
        <relationshipName>BlueBerrySessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Session_Capacity__c</fullName>
        <label>Session Capacity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Registration__c</fullName>
        <label>Total Registration</label>
        <summaryForeignKey>BlueBerryEventRegistration__c.BlueBerrySession__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>BlueBerrySession</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BlueBerrySessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotBookMorethanCapacity</fullName>
        <active>true</active>
        <description>Error to display when tried to book more than the capacity</description>
        <errorConditionFormula>Total_Registration__c  &gt;  Session_Capacity__c</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Sorry the session is full, please check for other available session if any.</errorMessage>
    </validationRules>
</CustomObject>